delete something for new smeite

--- a/app/views/admin/tags/filterTagGoodses.scala.html
+++ b/app/views/admin/tags/filterTagGoodses.scala.html
@@ -121,7 +121,7 @@
                     <td> @item._1</td>
                     <td><input type="text" name="tagNames[@i]" value="@item._5" width="80"></td>
                     <td><img src='@(item._4+"_210x210.jpg")' width="210" height="210"></td>
-                    <td><a href="@controllers.routes.Goods.view(item._2)">@item._3</a></td>
+                    <td><a href="@controllers.routes.Baobei.view(item._2)">@item._3</a></td>
                     <td>@item._6</td>
                     <td>@if(item._7==0){<span class="label label-warning">未审核</span>} @if(item._7 ==1){<span class="label label-success">审核通过</span>}@if(item._7 ==2){<span class="label ">审核不通过</span>}</td>
                     <td><input type="text" name="sortNums[@i]" value="@item._8" width="80"></td>
