--- a/app/views/admin/themes/listGoodses.scala.html
+++ b/app/views/admin/themes/listGoodses.scala.html
@@ -45,7 +45,7 @@
                         <tr id="@theme.id">
                             <td><input type="checkbox" name="ids[@i]" value="@theme.id" /></td>
                             <td>@theme.id</td>
-                            <td><a href='@controllers.routes.Goods.view(theme.goodsId)' target="_blank"><img src='@(theme.goodsPic+"_100x100.jpg")'> </a></td>
+                            <td><a href='@controllers.routes.Baobei.view(theme.goodsId)' target="_blank"><img src='@(theme.goodsPic+"_100x100.jpg")'> </a></td>
                             <td><input type="text" name="sortNums[@i]" value="@theme.sortNum"></td>
                             <td>
                                 <a href="#J_deleteModal"class="remove" data-id="@theme.id" role="button" data-toggle="modal"><i class="icon-trash"></i></a>
