--- a/app/views/baobei/view.scala.html
+++ b/app/views/baobei/view.scala.html
@@ -81,7 +81,7 @@ description = goods.intro
                      <dd class="shareTips">
 
                          <a rel="nofollow" class="info-wrong" href="javascript:;" id="J_JiuCuo" data-proid="488">信息有误？</a>
-                         <div class="share-link" data-sharetxt="@goods.name" data-sharepic="@goods.pic" data-sharelink="@controllers.routes.Goods.view(goods.id.get)">
+                         <div class="share-link" data-sharetxt="@goods.name" data-sharepic="@goods.pic" data-sharelink="@controllers.routes.Baobei.view(goods.id.get)">
                              <label class="fl l20 gc">分享到：</label>
                              <a class="s-sina fl" href="javascript:;" data-type="s-sina" alt="分享到新浪微博"></a>
                              <a class="s-qzone fl" href="javascript:;" data-type="s-qzone" alt="分享到QQ空间"></a>
