--- a/app/views/baobei/guessUserLikes.scala.html
+++ b/app/views/baobei/guessUserLikes.scala.html
@@ -3,7 +3,7 @@
 @for(goods<-page.items){
 <div class="goods">
     <div class="goods-pic"  style="height:210px" >
-        <a href="@controllers.routes.Goods.view(goods.id.get)" title="@goods.name" target="_blank">
+        <a href="@controllers.routes.Baobei.view(goods.id.get)" title="@goods.name" target="_blank">
             <img src='@(goods.pic+"_210x210.jpg")' title="@goods.name" alt="@goods.name"   height="210px" />
         </a>
 
