--- a/app/views/infos/help/siteMap.scala.html
+++ b/app/views/infos/help/siteMap.scala.html
@@ -3,7 +3,7 @@
 user,
 title = "网站地图_食美特，爱美食爱生活"
 )(css="/assets/css/template/sitemap.css") {
-
+  <!--  todo to adjust -->
 <div class="container">
     <div class="sitemap box-shadow">
          <h2>网站地图</h2>
@@ -12,7 +12,7 @@ title = "网站地图_食美特，爱美食爱生活"
             <a href="/find">发现</a>
             <a href="/forum">讨论吧</a>
             <a href="/jie">美食街</a>
-            <a href="/miss">特色馆</a>
+            <a href="/themes">特色馆</a>
         </div>
         <div class="site-nav">
             <h3>简约生活</h3>
@@ -23,12 +23,12 @@ title = "网站地图_食美特，爱美食爱生活"
         </div>
         <div class="site-nav">
             <h3>主题</h3>
-            <a href="/jie?cid=0">健康美食主题</a>
-            <a href="/jie?cid=1">特产乡情主题</a>
-            <a href="/jie?cid=2">滋补保健主题</a>
-            <a href="/miss?cid=3">居家生活主题</a>
-            <a href="/miss?cid=4">礼物主题</a>
-            <a href="/miss?cid=5">好玩意主题</a>
+            <a href="/themes/0">健康美食主题</a>
+            <a href="/themes/0">特产乡情主题</a>
+            <a href="/themes/0">滋补保健主题</a>
+            <a href="/themes/0">居家生活主题</a>
+            <a href="/themes/0">礼物主题</a>
+            <a href="/themes/0">好玩意主题</a>
         </div>
          <div class="tags-smeite clearfix">
          <h3>所有标签</h3>
