--- a/app/views/pages/gallery.scala.html
+++ b/app/views/pages/gallery.scala.html
@@ -1,9 +1,9 @@
 @(user:Option[models.user.User],flashes:List[models.advert.Advert],page:models.Page[((Long,String,String,Int),List[String])],cid:Int,s:Int)
 @views.html.template(
 user,
-nav="miss",
+nav="themes",
 title = "美食街,特色馆_食美特，爱美食爱生活"
-)(css="/assets/css/template/miss.css") {
+)(css="/assets/css/template/themes.css") {
 
 <div class="container clearfix" id="themes">
     <div class="main-box clearfix">
@@ -63,7 +63,7 @@ title = "美食街,特色馆_食美特，爱美食爱生活"
         <div class="group clearfix">
             @for((((themeId,themeName,themeIntro,themeLoveNum),pics),i)<-page.items.view.zipWithIndex){
             <div class="item @if((i+1)%4==0){last}">
-                <a href="@controllers.routes.Themes.subject(themeId)" title="@themeName" class="pic" target="_blank">
+                <a href="@controllers.routes.Themes.view(themeId)" title="@themeName" class="pic" target="_blank">
                     @for((pic,i)<-pics.view.zipWithIndex){
                     @if(i==0){
                     <img class="b-img" width="210" height="210" src='@(pic+"_210x210.jpg")' alt="@themeName">
@@ -74,15 +74,15 @@ title = "美食街,特色馆_食美特，爱美食爱生活"
 
                 </a>
                 <h3 class="ofh">
-                    <a href="@controllers.routes.Themes.subject(themeId)" target="_blank">@themeName</a>
+                    <a href="@controllers.routes.Themes.view(themeId)" target="_blank">@themeName</a>
                 </h3>
 
                 <div class="info">@themeIntro</div>
                 <a rel="followTheme" href="javascript:;" class="follow" data-type="0" data-themeid="@themeId">+ 关注</a>
 					<span class="mete pl15">
-                    <a href="@controllers.routes.Themes.likes(themeId)" class="follow-likes" target="_blank">
+
                         <em class="J_LikeCount">@themeLoveNum</em> 人关注
-                    </a>
+
                     </span>
             </div>
             }
