--- a/app/views/users/appraisal.scala.html
+++ b/app/views/users/appraisal.scala.html
@@ -42,7 +42,7 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                     <li class="clearfix @if((i+1)%3==0){last}" >
                         <div class="baobei-wrap">
                             <div class="baobei-pic">
-                                <a class="pic-link" target="_blank" href="@controllers.routes.Goods.view(goods.id.get)">
+                                <a class="pic-link" target="_blank" href="@controllers.routes.Baobei.view(goods.id.get)">
                                     <img src='@(goods.pic+"_210x210.jpg")' alt="@goods.name">
                                 </a>
                             </div>
@@ -68,13 +68,13 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                     @for(goods<-userLoveGoods.items) {
                     <li class="clearfix ">
                         <div class="news-pic">
-                            <a href="@controllers.routes.Goods.view(goods.id.get)" target="_blank">
+                            <a href="@controllers.routes.Baobei.view(goods.id.get)" target="_blank">
                                 <img src='@(goods.pic+"_80x80.jpg")' width="80" alt="@goods.name">
                             </a>
 
                         </div>
                         <div class="news-text">
-                            <p> <a href="@controllers.routes.Goods.view(goods.id.get)" target="_blank">@goods.name</a></p>
+                            <p> <a href="@controllers.routes.Baobei.view(goods.id.get)" target="_blank">@goods.name</a></p>
 
                             <a class="jd-btn sbl-btn J_InviteFellowJudge" href="javascript:;" data-proid="@goods.id">求鉴定</a>
                         </div>
