--- a/app/views/users/baobei.scala.html
+++ b/app/views/users/baobei.scala.html
@@ -40,10 +40,10 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                     @for((goods,i)<-page.items.view.zipWithIndex){
                     <div class="goods-item @if((i+1)%3==0){last}">
                         <div class="pic" style='height:210px '>
-                            <a href="@controllers.routes.Goods.view(goods.id.get)" target="_blank">
+                            <a href="@controllers.routes.Baobei.view(goods.id.get)" target="_blank">
                                 <img width="210px" alt="@goods.name" title="@goods.name" src="@goods.pic" >
                             </a>
-                            <a  href="@controllers.routes.Goods.view(goods.id.get)" class="goods_title">@goods.name</a>
+                            <a  href="@controllers.routes.Baobei.view(goods.id.get)" class="goods_title">@goods.name</a>
 
                         </div>
                         <div class="goods-wrap">
@@ -69,9 +69,9 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                                         <div class="share-user">
 
                                             <div class="info">
-                                                <a class="go-to-comment" href="@controllers.routes.Goods.view(goods.id.get)#J_CommentTxa" style="display: none" target="_blank">评论</a>
+                                                <a class="go-to-comment" href="@controllers.routes.Baobei.view(goods.id.get)#J_CommentTxa" style="display: none" target="_blank">评论</a>
 
-                                                <a href="@controllers.routes.Goods.view(goods.id.get)" target="_blank"><p>@goods.intro</p></a>
+                                                <a href="@controllers.routes.Baobei.view(goods.id.get)" target="_blank"><p>@goods.intro</p></a>
                                             </div>
                                         </div>
                                     </div>
@@ -91,7 +91,7 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                      <li class="clearfix @if((i+1)%3==0){last}" >
                          <div class="goods-item">
                              <div class="goods-pic">
-                                 <a class="pic-link" target="_blank" href="@controllers.routes.Goods.view(goods.id.get)">
+                                 <a class="pic-link" target="_blank" href="@controllers.routes.Baobei.view(goods.id.get)">
                                      <img src='@(goods.pic+"_210x210.jpg")' alt="@goods.name">
                                  </a>
                                &lt;!&ndash;  @if(!user.isEmpty && user.get.id==author.id){
