--- a/app/views/users/home.scala.html
+++ b/app/views/users/home.scala.html
@@ -48,10 +48,10 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
             @for((goods,i)<-goodses.items.view.zipWithIndex){
             <div class="goods-item @if((i+1)%3==0){last}">
                 <div class="pic" style='height:210px '>
-                    <a href="@controllers.routes.Goods.view(goods.id.get)" target="_blank">
+                    <a href="@controllers.routes.Baobei.view(goods.id.get)" target="_blank">
                         <img width="210px" alt="@goods.name" title="@goods.name" src="@goods.pic" >
                     </a>
-                    <a  href="@controllers.routes.Goods.view(goods.id.get)" class="goods_title">@goods.name</a>
+                    <a  href="@controllers.routes.Baobei.view(goods.id.get)" class="goods_title">@goods.name</a>
 
                 </div>
                 <div class="goods-wrap">
@@ -77,9 +77,9 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                                 <div class="share-user">
 
                                     <div class="info">
-                                        <a class="go-to-comment" href="@controllers.routes.Goods.view(goods.id.get)#J_CommentTxa" style="display: none" target="_blank">评论</a>
+                                        <a class="go-to-comment" href="@controllers.routes.Baobei.view(goods.id.get)#J_CommentTxa" style="display: none" target="_blank">评论</a>
 
-                                        <a href="@controllers.routes.Goods.view(goods.id.get)" target="_blank"><p>@goods.intro</p></a>
+                                        <a href="@controllers.routes.Baobei.view(goods.id.get)" target="_blank"><p>@goods.intro</p></a>
                                     </div>
                                 </div>
                             </div>
@@ -114,7 +114,7 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
             <div class="theme-item @if(((i+1)%3)==0){last} ">
                 <div class="theme-pic clearfix">
 
-                    <a href="@controllers.routes.Themes.subject(item._1._1)" class="pic" target="_blank">
+                    <a href="@controllers.routes.Themes.view(item._1._1)" class="pic" target="_blank">
                         @for((img,i)<-item._2.view.zipWithIndex){
                         @if(i==0){
                         <img class="b-img"  @if(!img.isEmpty){src='@(img.get+"_210x210.jpg")' width="210"height="210"}else {src="/assets/ui/blank.gif"} >
@@ -126,7 +126,7 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
 
                     </a>
                 </div>
-                <h3><a href="@controllers.routes.Themes.subject(item._1._1)" target="_blank">@item._1._2</a></h3>
+                <h3><a href="@controllers.routes.Themes.view(item._1._1)" target="_blank">@item._1._2</a></h3>
                 <div class="theme-state">
                     <span>@item._1._4 人关注</span>
                 </div>
